syntax = "proto3";

import "google/protobuf/timestamp.proto";
option go_package = "post-service/grpc/users";
package users;

service UserService {
  rpc getUserName (GetUserNameReq) returns (GetUserNameRes) {}
}

message GetUserNameReq {
  string user_id = 1;
}

message GetUserNameRes {
  bool status =1;
  string user_id = 2;
  string name = 3;
}

